  send command now checks if a `/command` was sent ie `/say` or `/stop`
  Added Parser scripts to manager commands
  Added parser verbose output when manually running scripts
  Added verbose output for start command, will display additional info if server cant start, and more
  Added (help)  `-h` optional parameter, will display name/description of function
  Added optional paramter `-f` to force specific features, like running update with -f will ignore current version checks, and reinstall


1.1.7
  Added custom cronjob config options to manager-config.ini
  removed old not working restart announcement and changed cronjob restart command to announce every 1minute for 15 minutes
  Updated ApacheInstaller to ask for user/group, prior was setting it to root. witch would make the site inaccessible
  Added option to manager-config to keep backups of the player/alliance data. OFF by default.
  Added dropdown for viewing backups of Player data.
  Fixed (i hope) UpdateManager script
  optimized manager-config tab on server config page

1.1.6
  Moved player count/list to server log
  Added cronjob to refresh server log every 30seconds
  Moved home chat to server log
  Added toggle to console page to switch between console.log and server.log
  Moved ServerINI and ManagerConfig Descriptions to ServerConfigController
  `./manager stop` now uses server log instead of console log
  Added server log location option in PHPConfig
  Updated UpdateManager.sh to not reset or delete previous options in config file_put_contents
  Updated ApacheInstaller to reflect IP address
  Added Profile Parser page, witch parses through profiling_stats.txt
  Added mpm_itk support to ApacheInstall


1.1.5
  Fixed HighScore.php being erased on update
  Added commands enablerestart and disablerestart
  Added manager options -d, -o, -b, -v
  Added Mail parsing to player parser
  Added Mail player page net worth to net worth column
  Added Mail resources/money to player page