@@ -1,10 +1,21 @@
 #!/bin/bash
-# Description: Starts the server.
+# Project: Dirty Server Manager
+# Author: Dirtyredz | David McCLain
+# License: MIT License, Copyright (c) 2017 David McCLain
+# Purpose: Avorion Server Management Script and web interface
+# Documentation: https://github.com/dirtyredz/Dirty-Server-Manager
+# Website: https://github.com/dirtyredz/Dirty-Server-Manager
+
+COMMAND_NAME="stop-web"
+COMMAND_DESCRIPTION="Stops PHP's Web Server"
+
+if [ "${DisplayDescription}" == "true" ]; then
+  DynamicEcho "$COMMAND_NAME"
+  DynamicEcho "$COMMAND_DESCRIPTION"
+  LoadFile "core_exit.sh"
+fi
 
 LogToManagerLog "Ran Stop-web command.";
+
 tmux kill-session -t ${GALAXY}_php
 DynamicEcho "PHP Server Stoped"
-if pidof ${GALAXY}_php > /dev/null;
-then
-  kill $(pidof ${GALAXY}_php)
-fi
