@@ -1,22 +1,44 @@
+;Maximum players on server.
 MAX_PLAYERS=10
+;Name of the galaxy, no spaces allowed
 GALAXY=GalaxyName
+;server start up parameters
 PARAMS='--public true --listed true --same-start-sector false'
+;server port. Default: 27000
 PORT=27000
+;How many days to keep logs. Default: 10
 LOG_ROTATION=10
+;Will automatically restart server if it detects a crash. Default: 27000
 AutoRestart=true
+;Will automatically restart the server at 2346, and 1146 server time. Default: true
 DailyRestart=true
+;To use BETA avorion or not, set before installing/updating. Default: false
 BETA=true
+;Webport to access web interface. Default: 8080
 WEBPORT=8080
+;IP to access web interface, and additional server startup requirments. Default: 0.0.0.0
 IPAddress=0.0.0.0
+;Cron Hour setting to run Sector Parsing.(0,6,12,18 will run every 6 hours) Default: 0,6,12,18
 GetSectorDataInterval="0,6,12,18"
+;Cron Minute setting to run Player parsing.(0,30 will run every hour at the 0 and 30 minute mark) Default: 0,30
 GetPlayerDataInterval="0,30"
+;Cron Minute setting to run alliance parsing.(5,35 will run every hour at the 5 and 35 minute mark) Default: 5,35
 GetAllianceDataInterval="5,35"
+;Cron job to be applied at start, and removed at stop.
 CustomCronjob_1=''
+;Cron job to be applied at start, and removed at stop.
 CustomCronjob_2=''
+;Cron job to be applied at start, and removed at stop.
 CustomCronjob_3=''
+;Cron job to be applied at start, and removed at stop.
 CustomCronjob_4=''
+;Cron job to be applied at start, and removed at stop.
 CustomCronjob_5=''
+;Will store past data parsings to be compared with current. Default: false
 KeepDataFiles=false
+;Number of days worth of parsings to keep. Default: 2
 KeepDataFilesDays='2'
+;will apply KeepDataFiles to players data.(KeepDataFiles must be true) Default: true
 KeepDataFilesPlayers=true
+;will apply KeepDataFiles to alliance data.(KeepDataFiles must be true) Default: true
 KeepDataFilesAlliances=true
